# cursorSpeedometer

./: .gitattributes  .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  greptile.json
.deft/core/: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  QUICK-START.md  README.md  REFERENCES.md  ROADMAP.md  SKILL.md  SPECIFICATION.md  Taskfile.yml  UPGRADING.md  VERSION  commands.md  glossary.md  go.mod  main.md  pyproject.toml  run  run.bat  run.py
.deft/core/.githooks/: pre-commit  pre-push
.deft/core/coding/: coding.md  hygiene.md  security.md  testing.md  toolchain.md
.deft/core/context/: long-horizon.md  spec-deltas.md  working-memory.md
.deft/core/contracts/: deterministic-questions.md
.deft/core/conventions/: machine-generated-banner.md  references.md  rule-ownership.json  task-caching.md  vbrief-filenames.md
.deft/core/core/: glossary.md  project.md  ralph.md
.deft/core/docs/: ARCHITECTURE.md  BROWNFIELD.md  CONCEPTS.md  FILES.md  RELEASING.md  agent-stuck-in-a-loop.md  agents-md-vs-skill-md.md  ai-agent-teaming.md  article-review-2026-05-01-03.md  audit-2026-05-10-installer-conformance.md  audit-2026-05-11-installer-conformance-recheck.md  claude-code-integration.md  design-deft-cache-quarantine.md  example-project-definition.md  getting-started.md  gitcrawl-fallback.md  good-agents-md.md  harness-is-everything-deft-plan.md  install-manifest.md  privacy-nfr.md  quarantine-spec.md  refactoring-guidelines.md  security.md  smoke-2026-05-06-v0.26.0-scale.md  smoke-2026-05-07-v0.26.0-rerun.md  smoke-2026-05-10-v0.27.1-relocator-dogfood.md  subagent-heartbeat.md  system-of-record-gate.md  the-harness-is-everything.md  thousand-skills.md  valuable-go-task-improvements.md  versioning.md
.deft/core/events/: README.md  event-record.schema.json  registry.json  registry.schema.json
.deft/core/history/: plan-2026-05-06-883-overnight-rc-chain.md  plan-2026-06-01-1387-headless-swarm-launch.md  plan-2026-06-05-swarm-fix-4-issues.md  session-2026-05-03-phase-1-fix-now-cohort-and-v0.24.0-release.md
.deft/core/incidents/: 2026-04-pocketos-railway-prod-db-wipe.md  README.md  _template.md
.deft/core/languages/: c.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  markdown.md  mermaid.md  officejs.md  python.md  rust.md  swift.md  typescript.md  vba.md
.deft/core/meta/: lessons.md  morals.md  security.md
.deft/core/patterns/: executor-layer-credentials.md  llm-app.md  multi-agent.md  prompt-assembly-layer-ordering.md  role-as-overlay.md
.deft/core/references/: cost-models.md  ip-risk.md  plain-english-ux.md
.deft/core/resilience/: continue-here.md
.deft/core/scm/: changelog.md  github.md
.deft/core/scripts/: _agents_md.py  _cache_fetch.py  _cache_quota.py  _cache_refresh.py  _cache_validate.py  _doctor_state.py  _event_detect.py  _events.py  _lifecycle_hygiene.py  _pathspec.py  _policy_show_cli.py  _precutover.py  _project_context.py  _project_definition_io.py  _relocate_snapshot.py  _relocate_states.py  _resolve_preflight_path.py  _safe_subprocess.py  _session_start_hook.py  _sor_gate_diff.py  _stdio_utf8.py  _triage_bootstrap_gitignore.py  _triage_classify_cli.py  _triage_queue_cli.py  _triage_scope_cli.py  _triage_scope_drift_cli.py  _triage_scope_ignores.py  _triage_scope_milestone.py  _triage_scope_mutations.py  _triage_scope_renderers.py  _triage_smoketest_stages.py  _triage_subscribe_cli.py  _triage_welcome_cli.py  _vbrief_build.py  _vbrief_fidelity.py  _vbrief_legacy.py  _vbrief_reconciliation.py  _vbrief_routing.py  _vbrief_safety.py  _vbrief_sources.py  (+87 more)
.deft/core/strategies/: README.md  artifact-guards.md  bdd.md  discuss.md  enterprise.md  interview.md  map.md  probe.md  rapid.md  research.md  roadmap.md  speckit.md  v0-20-contract.md  yolo.md
.deft/core/swarm/: swarm.md
.deft/core/tasks/: architecture.yml  cache.yml  capacity.yml  change.yml  changelog.yml  ci.yml  commit.yml  core.yml  framework.yml  install.yml  issue.yml  migrate.yml  policy.yml  pr.yml  prd.yml  scm.yml  (+25 more)
(+779 files in other folders)
