[project]
name = "deft-directive"
# version is kept in lockstep with the latest published release tag by
# scripts/release.py Step 5 (#771). Manual edits here are overwritten on
# every `task release -- X.Y.Z` and guarded by
# tests/content/test_pyproject_version_freshness.py.
version = "0.42.1"
description = "A layered framework for AI-assisted development with consistent standards and workflows"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "black>=23",
    "mypy>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_count = 0  # Prevent WinError 448: pytest-current symlink cleanup fails on Windows 11 24H2+ (#281)
# --cov is intentionally absent here. Use `task test:coverage` for coverage runs.
# Adding --cov to addopts causes false failures when running content tests in
# isolation (no Python source is exercised, so coverage reports 0%).
#
# Slow-marker convention (#975): the watchdog regression suite at
# tests/integration/test_triage_bootstrap_at_scale.py + the
# test_populate_cache_defers_when_cache_module_missing case in
# tests/test_triage_bootstrap.py burn ~5.85s on real time.sleep / thread
# joins (top 5 watchdog tests = 68% of triage suite wall-clock per the
# 2026-05-08 profile). They are marked @pytest.mark.slow and excluded by
# default via addopts so `task check` -> `pytest tests/` skips them; the
# new `task check:slow` lane runs the full suite (slow included). See
# CONTRIBUTING.md "Slow tests (#975)" for the contributor convention
# and the follow-up refactor tracker for the proper monkeypatch-based
# fix that retires the slow markers.
markers = [
    "slow: tests that exceed ~1s wall-clock (e.g. real-time watchdog joins). Skipped by default; run via `task check:slow`. See CONTRIBUTING.md for the convention. (#975)",
]
addopts = "-m 'not slow'"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
    "run",      # terminal-only CLI -- excluded pending refactor (#228)
    "run.py",   # importlib shim for run -- excluded pending refactor (#228)
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    "run",                # extension-less CLI entry point — not linted in Phase 1
    "run.py",             # importlib shim for tests — inherent E402/I001
    "swarm-worktrees",    # parallel-agent git worktrees -- linted via their own checkouts
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM"]

[tool.ruff.lint.isort]
# Combine `from X import a as _a` / `from X import b as _b` into a single
# parenthesised import block so large thin-wrapper modules (e.g.
# scripts/migrate_vbrief.py, #495/#505) stay near the <1000-line file-size
# guideline (coding/coding.md; a SHOULD/review-trigger, not a MUST, per #1488)
# without one line per imported symbol.
combine-as-imports = true

[tool.black]
line-length = 100
exclude = '''
/(
    \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^run$",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
# Shared by the CI Python job (`mypy tests/` in .github/workflows/ci.yml) and
# the local `task check` -> core:lint gate (`mypy run.py tests/`) so both
# surfaces type-check the tests/ tree under identical rules (#1475). Tests may
# omit annotations (disallow_untyped_defs=false), but a real type mismatch in
# tests/ still fails mypy -- which is what stops a tests/ type error from
# shipping green locally and reddening master after merge.
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false
